<resources>
    <string name="app_name">FootBallQuizz</string>
    <string name="history_title">Lịch sử điểm số</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="old_email">Enter your old email</string>
    <string name="new_email">Enter your new email</string>

    <string name="newPassword">Enter your new password</string>

    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_password">Enter your password</string>
    <string name="greeting_text">Hi, User</string>
    <string name="rank_text">RANK</string>
    <string name="point_text">Point</string>
    <string name="profile_icon_description">Profile Icon</string>
    <string name="lets_play_text">Let Play</string>
    <string name="easy_button_text">Easy</string>
    <string name="random_button_text">Random</string>
    <string name="hard_button_text">Hard</string>
    <string name="normal_button_text">Normal</string>


</resources>