<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#fbe9e7"
    tools:context=".MainActivity">

    <!-- Greeting and Profile Icon -->
    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_text"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Rank and Points Section -->

    <!-- Let's Play Section -->

    <!-- Game Mode Buttons -->

    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/profile_icon_description"
        android:scaleType="centerCrop"
        android:src="@drawable/user_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/rank_section"
        android:layout_width="378dp"
        android:layout_height="68dp"
        android:layout_marginTop="40dp"
        android:background="#ffffff"
        android:baselineAligned="false"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting">

        <!-- Rank -->
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/cup_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/rank_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="2"
            android:textSize="20sp" />

        <!-- Divider -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:background="#000000" />

        <!-- Points -->

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:contentDescription="Star Icon"
            android:src="@drawable/point_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/point_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="300"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/lets_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/lets_play_text"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rank_section" />

    <GridLayout
        android:id="@+id/game_modes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lets_play">

        <Button
            android:id="@+id/btn_random"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/btn_random"
            android:text="@string/random_button_text" />

        <Button
            android:id="@+id/btn_hard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/btn_hard"
            android:text="@string/hard_button_text" />

        <Button
            android:id="@+id/btn_normal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/btn_normal"
            android:text="@string/normal_button_text" />

        <Button
            android:id="@+id/btn_easy"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/btn_easy"
            android:text="@string/easy_button_text" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
